Fix: Adjust z-index and positioning of filter dropdowns

--- a/php/public/css/matches.css
+++ b/php/public/css/matches.css
@@ -14,7 +14,7 @@
 .table th .dropdown {
     position: relative;
     display: inline-block;
-    z-index: 1030;
+    z-index: 1050;
 }
 
 /* Scrollable menu */
@@ -155,6 +155,7 @@
     top: 0;
     background-color: #fff;
     z-index: 1020;
+    position: relative;
 }
 
 .table tbody tr {
